--- a/mick-pwm-test/mick-pwm.ioc
+++ b/mick-pwm-test/mick-pwm.ioc
@@ -280,7 +280,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.CRSFreq_Value=48000000
 RCC.DSIFreq_Value=20000000
 RCC.DSITXEscFreq_Value=5000000
@@ -360,7 +360,7 @@ SH.S_TIM4_ETR.ConfNb=1
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM4.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period,Pulse-PWM Generation2 CH2
 TIM4.Period=10750
-TIM4.Prescaler=8
+TIM4.Prescaler=7
 TIM4.Pulse-PWM\ Generation2\ CH2=750
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
