Add motor functionality

--- a/lab7/lab7.ioc
+++ b/lab7/lab7.ioc
@@ -48,7 +48,8 @@ Mcu.IP5=RCC
 Mcu.IP6=SAI1
 Mcu.IP7=SYS
 Mcu.IP8=TIM1
-Mcu.IPNb=9
+Mcu.IP9=TIM4
+Mcu.IPNb=10
 Mcu.Name=STM32L4R5ZITxP
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -92,46 +93,47 @@ Mcu.Pin42=PB14
 Mcu.Pin43=PB15
 Mcu.Pin44=PD8
 Mcu.Pin45=PD9
-Mcu.Pin46=PD14
-Mcu.Pin47=PD15
-Mcu.Pin48=PG7
-Mcu.Pin49=PG8
+Mcu.Pin46=PD13
+Mcu.Pin47=PD14
+Mcu.Pin48=PD15
+Mcu.Pin49=PG7
 Mcu.Pin5=PC13
-Mcu.Pin50=PC6
-Mcu.Pin51=PC7
-Mcu.Pin52=PC8
-Mcu.Pin53=PC9
-Mcu.Pin54=PA8
-Mcu.Pin55=PA9
-Mcu.Pin56=PA10
-Mcu.Pin57=PA13 (JTMS/SWDIO)
-Mcu.Pin58=PA14 (JTCK/SWCLK)
-Mcu.Pin59=PC10
+Mcu.Pin50=PG8
+Mcu.Pin51=PC6
+Mcu.Pin52=PC7
+Mcu.Pin53=PC8
+Mcu.Pin54=PC9
+Mcu.Pin55=PA8
+Mcu.Pin56=PA9
+Mcu.Pin57=PA10
+Mcu.Pin58=PA13 (JTMS/SWDIO)
+Mcu.Pin59=PA14 (JTCK/SWCLK)
 Mcu.Pin6=PC14-OSC32_IN (PC14)
-Mcu.Pin60=PC11
-Mcu.Pin61=PC12
-Mcu.Pin62=PD0
-Mcu.Pin63=PD2
-Mcu.Pin64=PD3
-Mcu.Pin65=PD4
-Mcu.Pin66=PD5
-Mcu.Pin67=PD6
-Mcu.Pin68=PB3 (JTDO/TRACESWO)
-Mcu.Pin69=PB4 (NJTRST)
+Mcu.Pin60=PC10
+Mcu.Pin61=PC11
+Mcu.Pin62=PC12
+Mcu.Pin63=PD0
+Mcu.Pin64=PD2
+Mcu.Pin65=PD3
+Mcu.Pin66=PD4
+Mcu.Pin67=PD5
+Mcu.Pin68=PD6
+Mcu.Pin69=PB3 (JTDO/TRACESWO)
 Mcu.Pin7=PC15-OSC32_OUT (PC15)
-Mcu.Pin70=PB5
-Mcu.Pin71=PB6
-Mcu.Pin72=PB8
-Mcu.Pin73=PB9
-Mcu.Pin74=PE0
-Mcu.Pin75=VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC
-Mcu.Pin76=VP_SYS_VS_Systick
-Mcu.Pin77=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin78=VP_TIM1_VS_no_output1
-Mcu.Pin79=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0
+Mcu.Pin70=PB4 (NJTRST)
+Mcu.Pin71=PB5
+Mcu.Pin72=PB6
+Mcu.Pin73=PB8
+Mcu.Pin74=PB9
+Mcu.Pin75=PE0
+Mcu.Pin76=VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC
+Mcu.Pin77=VP_SYS_VS_Systick
+Mcu.Pin78=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin79=VP_TIM1_VS_no_output1
 Mcu.Pin8=PF0
+Mcu.Pin80=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0
 Mcu.Pin9=PF1
-Mcu.PinsNb=80
+Mcu.PinsNb=81
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.3.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -236,6 +238,7 @@ PC9.Locked=true
 PC9.Signal=SDMMC1_D1
 PD0.Locked=true
 PD0.Signal=CAN1_RX
+PD13.Signal=S_TIM4_CH2
 PD14.Locked=true
 PD14.Signal=S_TIM4_CH3
 PD15.Locked=true
@@ -418,6 +421,8 @@ SH.S_TIM3_CH2.0=TIM3_CH2
 SH.S_TIM3_CH2.ConfNb=1
 SH.S_TIM3_CH3.0=TIM3_CH3
 SH.S_TIM3_CH3.ConfNb=1
+SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
+SH.S_TIM4_CH2.ConfNb=1
 SH.S_TIM4_CH3.0=TIM4_CH3
 SH.S_TIM4_CH3.ConfNb=1
 SH.S_TIM4_CH4.0=TIM4_CH4
@@ -434,6 +439,11 @@ TIM1.Period=9
 TIM1.Prescaler=19
 TIM1.Pulse-Output\ Compare1\ No\ Output=5
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM4.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period,Pulse-PWM Generation2 CH2
+TIM4.Period=10000
+TIM4.Prescaler=7
+TIM4.Pulse-PWM\ Generation2\ CH2=750
 VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC.Mode=SAI_A_BASIC
 VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC.Signal=SAI1_VP_$IpInstance_SAIA_SAI_BASIC
 VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0.Mode=DSPOoLibraryJjLibrary
