--- a/LCD/LCD.ioc
+++ b/LCD/LCD.ioc
@@ -87,10 +87,12 @@ Mcu.Pin71=PB8
 Mcu.Pin72=PB9
 Mcu.Pin73=PE0
 Mcu.Pin74=VP_SYS_VS_Systick
+Mcu.Pin75=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0
 Mcu.Pin8=PF7
 Mcu.Pin9=PH0-OSC_IN (PH0)
-Mcu.PinsNb=75
-Mcu.ThirdPartyNb=0
+Mcu.PinsNb=76
+Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.3.0
+Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32L4R5ZITxP
 MxCube.Version=6.11.0
@@ -397,10 +399,16 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+STMicroelectronics.X-CUBE-ALGOBUILD.1.3.0.DSPOoLibraryJjLibrary_Checked=true
+STMicroelectronics.X-CUBE-ALGOBUILD.1.3.0.IPParameters=LibraryCcDSPOoLibraryJjDSPOoLibrary
+STMicroelectronics.X-CUBE-ALGOBUILD.1.3.0.LibraryCcDSPOoLibraryJjDSPOoLibrary=true
+STMicroelectronics.X-CUBE-ALGOBUILD.1.3.0_SwParameter=LibraryCcDSPOoLibraryJjDSPOoLibrary\:true;
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate,Mode
 USART1.Mode=MODE_RX
 USART1.VirtualMode-Asynchronous=VM_ASYNC
+VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0.Mode=DSPOoLibraryJjLibrary
+VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0.Signal=STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-L4R5ZI-P
