--- a/XBee_Communocation_Test/XBee_Communocation_Test.ioc
+++ b/XBee_Communocation_Test/XBee_Communocation_Test.ioc
@@ -279,7 +279,7 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate,Mode
-USART1.Mode=MODE_TX
+USART1.Mode=MODE_TX_RX
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
